--- a/evo-cubist.rc
+++ b/evo-cubist.rc
@@ -1,1 +1,1 @@
-﻿IDI_ICON1               ICON    DISCARDABLE     "icons/evo-cubist.ico"
+﻿IDI_ICON1               ICON    DISCARDABLE     "evo-cubist.ico"
